src/test/ui/did_you_mean/issue-31424.stderr
error[E0596]: cannot borrow immutable argument `self` as mutable
  --> $DIR/issue-31424.rs:17:15
   |
17 |         (&mut self).bar();
   |               ^^^^
   |               |
   |               try removing `&mut` here
   |               cannot reborrow mutably

error[E0596]: cannot borrow immutable argument `self` as mutable
  --> $DIR/issue-31424.rs:23:15
   |
22 |     fn bar(self: &mut Self) {
   |            ---- consider changing this to `mut self`
23 |         (&mut self).bar();
   |               ^^^^ cannot borrow mutably

error: aborting due to previous error(s)

